# gmm-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/col-seg/: Cargo.toml
examples/col-seg/src/: main.rs
examples/col_seg_3d/: Cargo.toml
examples/col_seg_3d/src/: main.rs
examples/nalg-test/: Cargo.toml
examples/nalg-test/src/: main.rs
examples/norm_mixture/: Cargo.toml
examples/norm_mixture/src/: main.rs
examples/norm_mixture_3d/: Cargo.toml
examples/norm_mixture_3d/src/: main.rs
src/: lib.rs
