[package]
name = "norm_mixture_3d"
version = "0.1.0"
authors = ["damien <riouxld21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gmm = { path = "../../" }
clap = "*"
rand = "*"
rayon = "*"
statrs = "*"
nalgebra = "*"